test/cli/test-generate/variable-target-offline/resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: offline-author-check
  labels:
    targetApiVersion: v1
    targetKind: ConfigMap
